--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <h3 class="section-heading">Buttons</h3>
         <div>
           <button type="button" class="primary-button">Button 1</button>
-          <button type="button" class="secondary-button">Button 2</button>
+          <button type="button" class="secondary-button">X</button>
         </div>
       </section>
     </div>
@@ -54,12 +54,12 @@
         <h3 class="section-heading">Typography</h3>
         <h1 class="h1-sample">A sample header</h1>
         <p class="font-details-h1">
-          <span class="font-name">Berkshire Swash</span>,
-          <span class="font-color">#f2b90f</span>
+          <span class="font-name">Days One</span>,
+          <span class="font-color">#f9d502</span>
         </p>
         <h2 class="h2-sample">An example of a sub header</h2>
         <p class="font-details-h2">
-          <span class="font-name">Font Name</span>,
+          <span class="font-name">Monserrat</span>,
           <span class="font-color">#9d9d9d</span>
         </p>
         <p class="typography-sample">
@@ -93,11 +93,6 @@
     <!-- end .column -->
   </main>
 
-  <div class="full-width">
-    <footer>
-      <p>Be creative - don't just use this template as is!</p>
-    </footer>
-  </div>
 </body>
 
 </html>
